Minor fixes for schedule on mobile devices Signed-off-by: Eduard Itrich <eduard@itrich.net>

--- a/_assets/css/_sass/custom.scss
+++ b/_assets/css/_sass/custom.scss
@@ -300,7 +300,7 @@ tr:hover, tr:focus {
 .schedule-tab-content .tab-pane:after {
   content:"";
   display:block;
-  background: rgba($scs-mint, 0.4);;
+  background: rgba($scs-mint, 0.4);
   position:absolute;
   width:3px;
   height:100%;
@@ -362,4 +362,28 @@ tr:hover, tr:focus {
 }
 .schedule-tab-content .item .content h3{
   padding-top: 0;
+}
+
+@media (max-width: 767.98px) {
+  .schedule-tab-content .item {
+      background: rgba($scs-mint, 0.2);
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+  }
+  .schedule-tab-content .item:last-child {
+    padding-bottom: 1.5rem;
+  }
+  .schedule-tab-content .item .content {
+    padding-left: 0;
+  }
+  .schedule-tab-content .item .meta {
+      position: static;
+      width: auto;
+  }
+  .schedule-tab-content .item:after {
+    display: none;
+  }
+  .schedule-tab-content .tab-pane:after {
+    display: none;
+  }
 }
